# indiepixel

./: .pre-commit-config.yaml  MANIFEST.in  README.md  app.py  mise.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  test.yml
examples/: __init__.py  kitchen_sink.py
examples/cli/: animated_image.py  animation.py  animation_nested.py  circle.py  clock.py  gradient.py  image.py  kitchen_sink.py  kitchen_sink_cli.py  piechart.py  plot.py  square.py  stack.py  tall.py  wrappedtext.py  wrappedtext_center.py  wrappedtext_right.py
fonts/: 6x10-rounded.pbm  tb-8.bdf
indiepixel/: __init__.py  fonts.py
indiepixel/fonts/: 6x10-rounded.pil
scripts/: __init__.py  fonts.py
src/: __init__.py
src/indiepixel/: __init__.py  cli.py  example.py  fonts.py  widgets.py
src/indiepixel/static/: screen.css
src/indiepixel/templates/: base.html  index.html  not_found.html  widget.html
src/indiepixel_cli/: __init__.py
tests/unit/: test_output.py  test_pixlet_compat.py  test_widgets.py
