[project]
name = "indiepixel"
version = "0.1.0"
description = "Generate pixel graphics for the Tidbyt"
authors = [
  { name="Tom MacWright", email="tom@macwright.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "flask>=3.1.0",
    "pytz>=2024.2",
    "gunicorn>=23.0.0",
    "typing-extensions>=4.12.2"
]
[project.urls]
Homepage = "https://github.com/tmcw/indiepixel"
Issues = "https://github.com/tmcw/indiepixel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "pytest>=8.3.4",
]
