[project]
name = "indiepixel"
version = "0.8.5"
description = "Generate pixel graphics for the Tidbyt"
authors = [{ name = "Tom MacWright", email = "tom@macwright.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "flask>=3.1.0",
    "pillow>=11.0.0",
]

[project.scripts]
indiepixel = "indiepixel.cli:cli"

[project.urls]
Homepage = "https://github.com/tmcw/indiepixel"
Issues = "https://github.com/tmcw/indiepixel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    { include-group = "examples" },
    "ruff>=0.8.2",
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "syrupy>=4.8.1",
]
examples = ["pytz>=2024.2"]

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"] # include all the rules except ones that are explicitly ignored
ignore = [
    "ANN",    # let type checker handle annotation checks
    "ARG002", # allow unused arguments
    "COM",    # let formatter take care commas
    # "D",    # don't require docstrings
    "E501",   # leave line-length enforcement to formatter
    "ERA001", # allow commented-out code
    "FIX",    # allow "FIX" comments in code
    "ISC001", # conflicts with formatter
    "PTH",    # don't require using pathlib instead of os
    "TD",     # allow TODO comments to be whatever we want
    "TRY003",
    "D203",
    "D212",
    "TRY002",
    "PERF401",
    "C417",
    "INP001",
    "EM101",
    "T201",
    "PLR0913" # Let me use a lot of arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG", # unused arguments are fine in tests
    "S",   # allow asserts
]
"examples/*" = [
    "S", # allow asserts
    "T", # allow prints
]

[tool.pyright]
venvPath = "."
venv = ".venv"
